--- a/layout/styles/global.css
+++ b/layout/styles/global.css
@@ -114,7 +114,7 @@ li .dirName
 {
 	display: inline-block;
 	cursor: pointer;
-	max-width: calc(100% - 100px);
+	max-width: calc(100% - 125px);
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
@@ -134,6 +134,24 @@ li .dirAdd
 li .dirRemove
 {
 	background-image: url('../icons/remove.svg');
+	margin-left: 5px;
+}
+
+li .sortUp
+{
+	background-size: 16px 16px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url('../icons/sort_up.svg');
+	margin-left: 5px;
+}
+
+li .sortDown
+{
+	background-size: 16px 16px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url('../icons/sort_down.svg');
 	margin-left: 5px;
 }
 
